# constant_folding

./: Cargo.toml  README.md
src/: lib.rs
