[package]
name = "constantfolding"
version = "0.1.0"
edition = "2021"
license-file="LICENSE"
repository="https://github.com/aleph-lang/constantfolding"
description="Apply constant folding on Aleph Syntax Tree."

[profile.dev]
opt-level = 3

[profile.release]
opt-level = 3 

[dependencies]
aleph-syntax-tree = "0.1.0"
